Continuing work on Cons

--- a/presentations/postgresql-and-us/index.html
+++ b/presentations/postgresql-and-us/index.html
@@ -259,44 +259,56 @@ SELECT pg_size_pretty(pg_database_size('&lt;dbname&gt;'));
             <h2>Cons & Challenges</h2>
 
             <br />
+            <br />
 
             <ul>
-              <li>
-                Performance bottlenecks
-                <ul>
-                  <li>Slow queries and high CPU usage</li>
-                  <li>Indexing and query optimization challenges</li>
-                  <li>Resource contention and connection limits</li>
-                </ul>
-              </li>
-              <li>
-                Operational pain points
-                <ul>
-                  <li>Database migrations and schema changes</li>
-                  <li>Monitoring and alerting practices</li>
-                </ul>
-              </li>
-              <li>
-                Lessons learned from past experiences
-                <ul>
-                  <li>Reduce long-running transactions</li>
-                  <li>Optimize queries and indices</li>
-                  <li>Regularly review and update our database schema</li>
-                </ul>
-              </li>
+              <li>Performance bottlenecks</li>
+              <li>Operational pain points</li>
+              <li>Lessons learned from past experiences</li>
+            </ul>
+          </section>
+
+          <section>
+            <h2>Performance Bottlenecks</h2>
+
+            <br />
+            <br />
+
+            <ul>
+              <li>Slow queries and high CPU usage</li>
+              <li>Indexing and query optimization challenges</li>
+              <li>Resource contention and connection limits</li>
+            </ul>
+          </section>
+
+          <section>
+            <h2>Operational Pain Points</h2>
+
+            <br />
+            <br />
+
+            <ul>
+              <li>Database migrations and schema changes</li>
+              <li>Monitoring and alerting practices</li>
+            </ul>
+          </section>
+
+          <section>
+            <h2>Lessons Learned from Past Experiences</h2>
+
+            <br />
+            <br />
+
+            <ul>
+              <li>Reduce long-running transactions</li>
+              <li>Optimize queries and indices</li>
+              <li>Regularly review and update our database schema</li>
             </ul>
           </section>
 
           <section>
             <img data-src="./images/this-is-fine-fire.jpg" />
           </section>
-
-          <!--
-            TODO:
-            - Performance bottlenecks
-            - Operational pain points
-            - Lessons learned from past experiences
-          -->
         </section>
 
         <section>
