--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -273,7 +273,7 @@
           <p>March 2025</p>
           <p>
             I created and presented a talk on how to most effectively use, debug, optimize, and maintain PostgreSQL
-            databases. This talk was given to a group of software engineers and developers at Talkiatry.
+            databases. This talk was given to all members of the engineering organization at Talkiatry.
           </p>
         </aside>
 
