Modularize presentations part 1

--- a/presentations/postgresql-and-us/index.html
+++ b/presentations/postgresql-and-us/index.html
@@ -16,12 +16,12 @@
     <title>PostgreSQL and Us</title>
     <link rel="icon" type="image/x-icon" href="../../images/favicon.ico" />
 
-    <link rel="stylesheet" href="./reveal.js-5.1.0/reset.css" />
-    <link rel="stylesheet" href="./reveal.js-5.1.0/reveal.css" />
-    <link rel="stylesheet" href="./reveal.js-5.1.0/theme/solarized.css" />
+    <link rel="stylesheet" href="../lib/reveal.js-5.1.0/reset.css" />
+    <link rel="stylesheet" href="../lib/reveal.js-5.1.0/reveal.css" />
+    <link rel="stylesheet" href="../lib/reveal.js-5.1.0/theme/solarized.css" />
 
-    <link rel="stylesheet" href="./highlight.js-11.9.0/default.min.css" />
-    <script src="./highlight.js-11.9.0/highlight.min.js"></script>
+    <link rel="stylesheet" href="../lib/highlight.js-11.9.0/default.min.css" />
+    <script src="../lib/highlight.js-11.9.0/highlight.min.js"></script>
 
     <script>
       hljs.highlightAll();
@@ -618,7 +618,7 @@ CREATE INDEX idx_department ON employees(department);
     </script>
 
     <script type="module">
-      import Reveal from "./reveal.js-5.1.0/reveal.esm.js";
+      import Reveal from "../lib/reveal.js-5.1.0/reveal.esm.js";
 
       let deck = new Reveal({
         slideNumber: "c/t",
