Modularize presentations part 2

--- a/presentations/postgresql-and-us/index.html
+++ b/presentations/postgresql-and-us/index.html
@@ -23,46 +23,11 @@
     <link rel="stylesheet" href="../lib/highlight.js-11.9.0/default.min.css" />
     <script src="../lib/highlight.js-11.9.0/highlight.min.js"></script>
 
+    <link rel="stylesheet" href="../css/styles.css" />
+
     <script>
       hljs.highlightAll();
     </script>
-
-    <style>
-      .reveal {
-        & .slides {
-          & section {
-            & h1,
-            h2,
-            h3,
-            h4,
-            h5,
-            h6 {
-              text-transform: none;
-            }
-
-            & ul {
-              font-size: 75%;
-            }
-
-            & p {
-              font-size: 75%;
-            }
-
-            & table {
-              font-size: 65%;
-            }
-          }
-        }
-      }
-
-      .blue {
-        color: #268bd2;
-      }
-
-      a[target="_blank"]::after {
-        content: " \2197";
-      }
-    </style>
   </head>
 
   <body>
