Paternity leave copy

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -138,10 +138,10 @@
         <!-- <aside>
           <h3>Paternity Leave</h3>
           <p class="family-medical-leave">Family and Medical Leave</p>
-          <p>INSERT START DATE - INSERT END DATE</p>
+          <p>March 2025 - June 2025</p>
 
           <p>
-            Spent a 12-week parental leave to provide support to my partner during the postpartum phase and create a
+            Spent a 12-week parental leave providing support to my partner during the postpartum phase and create a
             strong bond with our recently-born child.
           </p>
         </aside> -->
